feat: checklist notifications
